crawler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crawler-service
  namespace: crawler
spec:
  selector:
    app: synergychat-crawler # This is how the service knows which pods to route traffic to
  ports:
    - protocol: TCP # TCP will allow us to use HTTP
      port: 80 # This is the port that the service will listen on
      targetPort: 8080 # This is the port that the pods are listening on
